--- a/src/Components/PopupModal/PopupModal.scss
+++ b/src/Components/PopupModal/PopupModal.scss
@@ -6,7 +6,7 @@
   bottom: 0px;
   z-index: 3;
 
-  .background {
+  .bg {
     width: 100%;
     height: 100%;
     background-color: rgba(4, 4, 15, 0.8);
@@ -18,7 +18,7 @@
     width: 824px;
     height: 485px;
     background-color: #ffffff;
-    padding: 4px;
+    padding: 40px 84px;
     margin: 0 auto;
     border-radius: 8px;
     position: absolute;
@@ -26,5 +26,13 @@
     top: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
+
+    .modal-title {
+      font-size: 32px;
+      font-weight: bold;
+      line-height: 1.38;
+      color: #333333;
+      margin-bottom: 56px;
+    }
   }
 }
