--- a/src/Components/TimeSelector/TimeSelector.scss
+++ b/src/Components/TimeSelector/TimeSelector.scss
@@ -4,3 +4,9 @@
   line-height: 1.29;
   letter-spacing: 0.9px;
 }
+
+.time-sel {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
