--- a/src/Components/DropDown/DropDown.scss
+++ b/src/Components/DropDown/DropDown.scss
@@ -12,33 +12,13 @@
     position: relative;
     cursor: pointer;
 
+    &.active {
+      background-color: #efefef;
+    }
+
     &:hover {
       background-color: #f9f9f9;
     }
-
-    .dropdown-title {
-      position: absolute;
-      left: 16px;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-    .dropdown-icon {
-      position: absolute;
-      right: 16px;
-      top: 50%;
-      transform: translateY(-50%);
-      object-fit: contain;
-    }
-  }
-
-  .dropdown-box-active {
-    width: 152px;
-    height: 44px;
-    border-radius: 8px;
-    border: solid 1px #dadbdf;
-    background-color: #efefef;
-    position: relative;
-    cursor: pointer;
 
     .dropdown-title {
       position: absolute;
@@ -62,7 +42,9 @@
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.16);
     background-color: #ffffff;
     position: absolute;
+    margin-top: 8px;
     overflow: scroll;
+    z-index: 50;
 
     li {
       font-size: 16px;
