--- a/src/Components/PopupModal/PopupModal.scss
+++ b/src/Components/PopupModal/PopupModal.scss
@@ -34,5 +34,43 @@
       color: #333333;
       margin-bottom: 56px;
     }
+
+    .divider {
+      width: 656px;
+      height: 1px;
+      background-color: #dadbdf;
+      margin: 32px 0;
+    }
+
+    .btn-area {
+      display: flex;
+      justify-content: flex-end;
+      margin-top: 56px;
+
+      .btn1 {
+        width: 62px;
+        height: 44px;
+        border-radius: 8px;
+        border: solid 1px #dadbdf;
+        background-color: rgba(255, 255, 255, 0);
+        margin-right: 16px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+      }
+
+      .btn2 {
+        width: 62px;
+        height: 44px;
+        border-radius: 8px;
+        background-color: #4c80f1;
+        color: #ffffff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+      }
+    }
   }
 }
