--- a/src/index.scss
+++ b/src/index.scss
@@ -1,30 +1,17 @@
 body {
   margin: 0;
-  font-family: "NotoSansCJKkr-Regular", -apple-system, BlinkMacSystemFont,
-    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-    "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: "Noto Sans KR", sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
   font-size: 16px;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-@font-face {
-  font-family: "NotoSansCJKkr-Bold";
-  src: url("./Styles/Fonts/NotoSansCJKkr-Bold.otf") format("truetype");
-}
-
-@font-face {
-  font-family: "NotoSansCJKkr-Regular";
-  src: url("./Styles/Fonts/NotoSansCJKkr-Regular.otf") format("truetype");
-}
-
-@font-face {
-  font-family: "NotoSansCJKkr-Light";
-  src: url("./Styles/Fonts/NotoSansCJKkr-Light.otf") format("truetype");
 }
