--- a/src/Components/DropDown/DropDown.scss
+++ b/src/Components/DropDown/DropDown.scss
@@ -43,7 +43,7 @@
     background-color: #ffffff;
     position: absolute;
     margin-top: 8px;
-    overflow: scroll;
+    overflow: auto;
     z-index: 50;
 
     li {
