--- a/src/Components/DatePicker/Days.scss
+++ b/src/Components/DatePicker/Days.scss
@@ -1,4 +1,6 @@
 .dp-days {
+  margin-right: -5px;
+
   .label-wrapper {
     width: 100%;
     display: flex;
@@ -31,7 +33,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      margin: 12px 13.5px 0 -2px;
+      margin: 12px 14.3px 0 -2px;
       position: relative;
       cursor: pointer;
 
@@ -54,32 +56,8 @@
         color: rgba(76, 128, 241, 0.2);
       }
 
-      &.between {
-        border-radius: 50%;
-      }
-
       &.start,
       &.between,
-      &.end {
-        border-radius: 50%;
-        background-color: #4c80f1;
-        color: #ffffff;
-
-        &:hover {
-          background-color: #4371d4;
-        }
-      }
-
-      &.start {
-        border-radius: 50%;
-        background-color: #4c80f1;
-        color: #ffffff;
-
-        &:hover {
-          background-color: #4371d4;
-        }
-      }
-
       &.end {
         border-radius: 50%;
         background-color: #4c80f1;
