--- a/src/Components/PopupModal/PopupModal.scss
+++ b/src/Components/PopupModal/PopupModal.scss
@@ -5,10 +5,11 @@
   right: 0px;
   bottom: 0px;
   z-index: 3;
+  overflow: auto;
 
   .bg {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: rgba(4, 4, 15, 0.8);
     position: absolute;
     z-index: 1;
@@ -29,7 +30,7 @@
 
     .modal-title {
       font-size: 32px;
-      font-weight: bold;
+      font-weight: 700;
       line-height: 1.38;
       color: #333333;
       margin-bottom: 56px;
